--- a/ZKDLComponents/src/main/resources/web/dlzklib/resource/listboxSortManagerWindow.zul
+++ b/ZKDLComponents/src/main/resources/web/dlzklib/resource/listboxSortManagerWindow.zul
@@ -5,26 +5,26 @@
 <?page title="Listbox manager"?>
 
 <zk xmlns="http://www.zkoss.org/2005/zul">
-    <window onOK="ctl.onOk()" onCancel="ctl.onStorno()" width="520px" id="winListboxManager" closable="true" border="normal" self="@{define(content)}"
+    <window onOK="ctl.onOk()" onCancel="ctl.onStorno()" width="540px" id="winListboxManager" closable="true" border="normal" self="@{define(content)}"
         apply="cz.datalite.zk.components.list.window.controller.ListboxSortManagerController">
 
         <hbox style="margin: 10px;">
             <image src="~./dlzklib/img/sort_big.png" />
             <label  style="font-size: 150%; font-weight: bold; margin-left: 10px;" value="${c:l('listbox.sortingManager.title')}" />
         </hbox>
-        <grid width="500px" model="@{ctl.model}" style="margin-top: 10px;">
+        <grid width="500px" model="@{ctl.model}" style="margin: 10px;">
             <columns sizable="false">
-                <column label="${c:l('listbox.sortingManager.number')}" width="30px"/>
-                <column label="${c:l('listbox.sortingManager.column')}" width="220px"/>
-                <column label="${c:l('listbox.sortingManager.sort')}" width="220px"/>
+                <column label="${c:l('listbox.sortingManager.number')}" width="40px"/>
+                <column label="${c:l('listbox.sortingManager.column')}" width="230px"/>
+                <column label="${c:l('listbox.sortingManager.sort')}" width="230px"/>
             </columns>
             <rows>
                 <row self="@{each=sort}">
                     <label value="@{sort.number}"/>
-                    <combobox  selectedItem="@{sort.column}" model="@{sort.modelColumns}" width="90%">
+                    <combobox  selectedItem="@{sort.column}" model="@{sort.modelColumns}" width="100%">
                         <comboitem self="@{each=column}" label="@{column.value}" value="@{column}"/>
                     </combobox>
-                    <combobox selectedItem="@{sort.sortType}" model="@{sort.modelSortTypes}" width="90%">
+                    <combobox selectedItem="@{sort.sortType}" model="@{sort.modelSortTypes}" width="100%">
                         <comboitem self="@{each=sortType}" label="@{sortType.name}" value="@{sortType}"/>
                     </combobox>
                 </row>
