--- a/ZKDLComponents/src/main/resources/web/dlzklib/resource/listboxFilterManagerWindow.zul
+++ b/ZKDLComponents/src/main/resources/web/dlzklib/resource/listboxFilterManagerWindow.zul
@@ -12,7 +12,7 @@
             <image src="~./dlzklib/img/filter_big.png" />
             <label style="font-size: 150%; font-weight: bold; margin-left: 10px;" value="${c:l('listbox.filterManager.title')}" />
         </hbox>
-        <grid width="700px" model="@{ctl.modelFilter}" style="margin: 10px 10px 0;">
+        <grid width="700px" model="@{ctl.rows}" style="margin: 10px 10px 0;">
             <columns sizable="false">
                 <column label="${c:l('listbox.filterManager.column')}"/>
                 <column label="${c:l('listbox.filterManager.operator')}" width="20%"/>
@@ -21,11 +21,11 @@
                 <column label="" width="30px" style="text-align: center;" />
             </columns>
             <rows>
-                <row self="@{each=expression}" value="@{expression}" >
-                    <combobox constraint="strict" onAfterRender="ctl.onSelectColumn(self)" onSelect="ctl.onSelectColumn(self)" selectedItem="@{expression.template}" model="@{ctl.modelTemplates}" width="100%">
+                <row self="@{each=expression}" value="@{expression}" onRenderComponents="ctl.onRenderComponents(self)">
+                    <combobox constraint="strict" onAfterRender="ctl.onRenderComponents(self)" onSelect="ctl.onSelectColumn(self)" selectedItem="@{expression.template}" model="@{ctl.modelTemplates}" width="100%">
                         <comboitem self="@{each=template}" label="@{template.label}" value="@{template}"/>
                     </combobox>
-                    <combobox constraint="strict" onSelect="ctl.onSelectOperator(self)" selectedItem="@{expression.operator}" model="@{expression.operators}" width="100%">
+                    <combobox constraint="strict" onSelect="ctl.onSelectOperator(self)" selectedItem="@{expression.model.operator}" model="@{expression.model.operators}" width="100%">
                         <comboitem self="@{each=operator}" label="@{operator.label}" value="@{operator}"/>
                     </combobox>
                     <space />
