Localization of sorting messages (ascending, descending)
git-svn-id: http://zk-dl.googlecode.com/svn/trunk@63 14f4ca54-e300-ebc0-3ca8-cadf33e97b03

--- a/ZKDLComponents/src/main/resources/web/dlzklib/resource/listboxSortManagerWindow.zul
+++ b/ZKDLComponents/src/main/resources/web/dlzklib/resource/listboxSortManagerWindow.zul
@@ -25,7 +25,9 @@
                         <comboitem self="@{each=column}" label="@{column.value}" value="@{column}"/>
                     </combobox>
                     <combobox selectedItem="@{sort.sortType}" model="@{sort.modelSortTypes}" width="100%">
-                        <comboitem self="@{each=sortType}" label="@{sortType.name}" value="@{sortType}"/>
+                        <comboitem self="@{each=sortType}" 
+                            label="@{sortType.stringValue, converter='cz.datalite.zk.components.list.window.controller.ListboxSortManagerController$SortTypeNameConverter'}"
+                            value="@{sortType}"/>
                     </combobox>
                 </row>
             </rows>
