- Missing dependency in pom.xml for dl-zk-spring
git-svn-id: http://zk-dl.googlecode.com/svn/trunk@87 14f4ca54-e300-ebc0-3ca8-cadf33e97b03

--- a/ZKDLTutorial/src/main/webapp/categoryDetail.zul
+++ b/ZKDLTutorial/src/main/webapp/categoryDetail.zul
@@ -5,7 +5,7 @@
 
 <zk xmlns="http://www.zkoss.org/2005/zul">
 
-    <window id="categoryDetailWindow" border="normal" title="Detail category" closable="true" width="700px"
+    <window id="categoryDetailWindow" border="normal" title="Category detail" closable="true" width="700px"
             apply="${categoryDetailController}">
 
         <grid>
