--- a/ZKComposer/src/main/resources/web/busybox.zul
+++ b/ZKComposer/src/main/resources/web/busybox.zul
@@ -12,7 +12,7 @@
                 <span class="z-loading-icon"></span>
                 <span id="busy-box-label">${arg.message}</span>
             </div>
-            <button  style="margin: 5px auto;" visible="${arg.cancellable}">${labels.zkcomposer.cancel}</button>
+            <button  style="margin: 5px auto;" visible="${arg.cancellable}" forward="onClose">${labels.zkcomposer.cancel}</button>
     </window>
 
 </zk>
