Upgrade to latest 1.3.x version
git-svn-id: http://zk-dl.googlecode.com/svn/trunk@161 14f4ca54-e300-ebc0-3ca8-cadf33e97b03

--- a/ZKDLTutorial/src/main/webapp/taskOverview.zul
+++ b/ZKDLTutorial/src/main/webapp/taskOverview.zul
@@ -14,11 +14,13 @@
                     <button id="newButton" label="Create new task"/>
                     <button id="openDetailButton" label="Open selected task"/>
                     <button id="deleteButton" label="Delete selected task"/>
+                    <textbox id="textboxSelected"/>
                 </listControl>
             </north>
             <center>
                 <listbox id="taskList" apply="${ctl.listCtl}" vflex="true" selectedItem="@{ctl.task}"
-                         selectFirstRow="true" fixedLayout="true">
+                         selectFirstRow="true" fixedLayout="true"
+                         selectedItems="@{ctl.tasks}" checkmark="true" multiple="true">
                     <listhead>
                         <listheader label="Name" sort="db()"/>
                         <listheader label="Description" sort="db()"/>
