--- a/ZKDLComponents/src/main/resources/web/dlzklib/resource/listboxFilterManagerWindow.zul
+++ b/ZKDLComponents/src/main/resources/web/dlzklib/resource/listboxFilterManagerWindow.zul
@@ -22,10 +22,10 @@
             </columns>
             <rows>
                 <row self="@{each=expression}" value="@{expression}" onRenderComponents="ctl.onRenderComponents(self)">
-                    <combobox constraint="strict" onAfterRender="ctl.onRenderComponents(self)" onSelect="ctl.onSelectColumn(self)" selectedItem="@{expression.template}" model="@{ctl.modelTemplates}" width="100%">
+                    <combobox constraint="strict" onAfterRender="ctl.onRenderComponents(self)" onSelect="ctl.onSelectColumn(self)" selectedItem="@{expression.template}" model="@{ctl.modelTemplates}" hlex="1">
                         <comboitem self="@{each=template}" label="@{template.label}" value="@{template}"/>
                     </combobox>
-                    <combobox constraint="strict" onSelect="ctl.onSelectOperator(self)" selectedItem="@{expression.model.operator}" model="@{expression.model.operators}" width="100%">
+                    <combobox constraint="strict" onSelect="ctl.onSelectOperator(self)" selectedItem="@{expression.model.operator}" model="@{expression.model.operators}" hlex="1">
                         <comboitem self="@{each=operator}" label="@{operator.label}" value="@{operator}"/>
                     </combobox>
                     <space />
