--- a/ZKDLComponents/src/main/resources/web/dlzklib/resource/listboxFilterManagerWindow.zul
+++ b/ZKDLComponents/src/main/resources/web/dlzklib/resource/listboxFilterManagerWindow.zul
@@ -18,14 +18,14 @@
                 <column label="${c:l('listbox.filterManager.operator')}" width="20%"/>
                 <column label="${c:l('listbox.filterManager.value')}" width="20%"/>
                 <column label="${c:l('listbox.filterManager.value')}" width="20%"/>
-                <column label="" width="30px" style="text-align: center;" />
+                <column label="" width="40px" style="text-align: center;" />
             </columns>
             <rows>
                 <row self="@{each=expression}" value="@{expression}" onRenderComponents="ctl.onRenderComponents(self)">
-                    <combobox constraint="strict" onAfterRender="ctl.onRenderComponents(self)" onSelect="ctl.onSelectColumn(self)" selectedItem="@{expression.template}" model="@{ctl.modelTemplates}" hlex="1">
+                    <combobox constraint="strict" onAfterRender="ctl.onRenderComponents(self)" onSelect="ctl.onSelectColumn(self)" selectedItem="@{expression.template}" model="@{ctl.modelTemplates}" hflex="1">
                         <comboitem self="@{each=template}" label="@{template.label}" value="@{template}"/>
                     </combobox>
-                    <combobox constraint="strict" onSelect="ctl.onSelectOperator(self)" selectedItem="@{expression.model.operator}" model="@{expression.model.operators}" hlex="1">
+                    <combobox constraint="strict" onSelect="ctl.onSelectOperator(self)" selectedItem="@{expression.model.operator}" model="@{expression.model.operators}" hflex="1">
                         <comboitem self="@{each=operator}" label="@{operator.label}" value="@{operator}"/>
                     </combobox>
                     <space />
