--- a/ZKDLComponents/src/main/resources/web/js/dlzklib/resource/listboxColumnManagerWindow.zul
+++ b/ZKDLComponents/src/main/resources/web/js/dlzklib/resource/listboxColumnManagerWindow.zul
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?init class="cz.datalite.zk.databinder.DLDataBinderInit" arg0="winListboxManager"?>
 <?taglib uri="http://www.zkoss.org/dsp/web/core" prefix="c"?>
+<?xel-method prefix="zkdl" name="i" class="cz.datalite.helpers.ZKDLResourceResolver" signature="java.lang.String resolveImage(java.lang.String)"?>
 
 <?page title="Listbox manager"?>
 
@@ -9,7 +10,7 @@
         apply="cz.datalite.zk.components.list.window.controller.ListboxColumnManagerController">
 
         <hbox style="margin: 10px;">
-            <image src="~./dlzklib/img/menu_items_big.png" />
+            <image src="${zkdl:i('menu_items_big.png')}" />
             <label  style="font-size: 150%; font-weight: bold; margin-left: 10px;" value="${c:l('listbox.columnManager.title')}" />
         </hbox>
 
@@ -24,10 +25,10 @@
             </vbox>
 
             <vbox style="margin-top: 50px; margin-left: 5px; margin-right: 5px">
-                <button onClick="ctl.selector.onUnusedToUsedAllMove()" src="~./dlzklib/img/right2Arrow32x32.png"/>
-                <button onClick="ctl.selector.onUnusedToUsedMove()" src="~./dlzklib/img/rightArrow32x32.png"/>
-                <button onClick="ctl.selector.onUsedToUnusedMove()" src="~./dlzklib/img/leftArrow32x32.png"/>
-                <button onClick="ctl.selector.onUsedToUnusedAllMove()" src="~./dlzklib/img/left2Arrow32x32.png"/>
+                <button onClick="ctl.selector.onUnusedToUsedAllMove()" src="${zkdl:i('right2Arrow32x32.png')}"/>
+                <button onClick="ctl.selector.onUnusedToUsedMove()" src="${zkdl:i('rightArrow32x32.png')}"/>
+                <button onClick="ctl.selector.onUsedToUnusedMove()" src="${zkdl:i('leftArrow32x32.png')}"/>
+                <button onClick="ctl.selector.onUsedToUnusedAllMove()" src="${zkdl:i('left2Arrow32x32.png')}"/>
             </vbox>
 
             <vbox>
@@ -40,10 +41,10 @@
             </vbox>
 
             <vbox style="margin-top: 50px; margin-left: 5px;">
-                <button onClick="ctl.selector.onTopMove()" src="~./dlzklib/img/up2Arrow32x32.png"/>
-                <button onClick="ctl.selector.onUpMove()" src="~./dlzklib/img/upArrow32x32.png"/>
-                <button onClick="ctl.selector.onDownMove()" src="~./dlzklib/img/downArrow32x32.png"/>
-                <button onClick="ctl.selector.onBottomMove()" src="~./dlzklib/img/down2Arrow32x32.png"/>
+                <button onClick="ctl.selector.onTopMove()" src="${zkdl:i('up2Arrow32x32.png')}"/>
+                <button onClick="ctl.selector.onUpMove()" src="${zkdl:i('upArrow32x32.png')}"/>
+                <button onClick="ctl.selector.onDownMove()" src="${zkdl:i('downArrow32x32.png')}"/>
+                <button onClick="ctl.selector.onBottomMove()" src="${zkdl:i('down2Arrow32x32.png')}"/>
             </vbox>
         </hbox>
 
