DLListbox controller upgrade - controller can store new filter types including enums and collections of basic types or enums. Other types must implement DLFilterBean interface. Minor bug fixes.

--- a/ZKDLComponents/src/main/resources/web/js/dlzklib/resource/listboxProfileEditWindow.zul
+++ b/ZKDLComponents/src/main/resources/web/js/dlzklib/resource/listboxProfileEditWindow.zul
@@ -43,11 +43,11 @@
 	            </rows>
 	        </grid>
 	        
-	        <hbox style="margin: 10px; margin-left: auto;">
-	        	<button label="${c:l('listbox.profileManager.delete')}" onClick="@command('delete')"/>            	
-            	<button label="${c:l('listbox.profileManager.save')}" onClick="@command('save', saveAgendaSettings=saveAgendaSettingsCheckbox.checked)"/>
-            	<button label="${c:l('listbox.storno')}" onClick="@command('close')" />
-        	</hbox>
+	        <div style="margin: 5px 10px 5px auto; text-align:right;">
+	        	<button label="${c:l('listbox.profileManager.delete')}" onClick="@command('delete')" mold="trendy"/>            	
+            	<button label="${c:l('listbox.profileManager.save')}" onClick="@command('save', saveAgendaSettings=saveAgendaSettingsCheckbox.checked)" mold="trendy"/>
+            	<button label="${c:l('listbox.storno')}" onClick="@command('close')" mold="trendy"/>
+        	</div>
         		        
         </vlayout>      
     </window>
