--- a/ZKDLComponents/src/main/resources/web/js/dlzklib/resource/listboxFilterManagerWindow.zul
+++ b/ZKDLComponents/src/main/resources/web/js/dlzklib/resource/listboxFilterManagerWindow.zul
@@ -5,21 +5,25 @@
 
 <?page title="Listbox manager"?>
 
-<zk xmlns="http://www.zkoss.org/2005/zul">
-    <window onOK="ctl.onOk()" onCancel="ctl.onStorno()" width="740px" id="winListboxManager" closable="true" border="normal" self="@{define(content)}"
-        apply="cz.datalite.zk.components.list.window.controller.ListboxFilterManagerController" >
+<zk xmlns="http://www.zkoss.org/2005/zul" xmlns:n="native">
+    <window onOK="ctl.onOk()" onCancel="ctl.onStorno()" width="740px" id="winListboxManager" closable="true" 
+            border="normal" self="@{define(content)}"
+            apply="cz.datalite.zk.components.list.window.controller.ListboxFilterManagerController" 
+            sclass="window">
+      <div sclass="editable padding10">
 
-        <hbox style="margin: 10px;">
+        <hbox sclass="margin-bottom15">
             <image src="${zkdl:i('filter_big.png')}" />
-            <label style="font-size: 150%; font-weight: bold; margin-left: 10px;" value="${c:l('listbox.filterManager.title')}" />
+            <label sclass="bold margin-left10" style="font-size: 150%" value="${c:l('listbox.filterManager.title')}" />
         </hbox>
-        <grid width="700px" model="@{ctl.rows}" style="margin: 10px 10px 0;">
+        
+        <grid model="@{ctl.rows}" sclass="margin-bottom15" width="700px">
             <columns sizable="false">
                 <column label="${c:l('listbox.filterManager.column')}"/>
                 <column label="${c:l('listbox.filterManager.operator')}" width="20%"/>
                 <column label="${c:l('listbox.filterManager.value')}" width="20%"/>
                 <column label="${c:l('listbox.filterManager.value')}" width="20%"/>
-                <column label="" width="40px" style="text-align: center;" />
+                <column label="" sclass="tac" width="40px" />
             </columns>
             <rows>
                 <row self="@{each=expression}" value="@{expression}" onRenderComponents="ctl.onRenderComponents(self)">
@@ -31,16 +35,21 @@
                     </dlcombobox>
                     <space />
                     <space />
-                    <image style="cursor: pointer; margin-left: 4px;" tooltiptext="${c:l('listbox.filterManager.removeOne')}" src="${zkdl:i('remove16x16.png')}" onClick="ctl.onRemove(self.parent)"/>
+                    <image src="${zkdl:i('remove16x16.png')}" sclass="margin-left4" style="cursor: pointer" tooltiptext="${c:l('listbox.filterManager.removeOne')}"  onClick="ctl.onRemove(self.parent)"/>
                 </row>
             </rows>
         </grid>
-        <hbox style="margin: 10px 10px 10px auto;">
+        
+        <div sclass="fr">
             <button label="${c:l('listbox.filterManager.add')}" forward="onAdd" />
             <button label="${c:l('listbox.filterManager.removeAll')}" forward="onRemoveAll"/>
             <space width="50px"/>
             <button label="${c:l('listbox.ok')}" forward="onOk" />
             <button label="${c:l('listbox.storno')}" forward="onStorno"/>
-        </hbox>
+        </div>
+        
+        <n:br class="clear" />
+    
+      </div>
     </window>
 </zk>
