--- a/ZKDLComponents/src/main/resources/web/js/dlzklib/resource/listboxSortManagerWindow.zul
+++ b/ZKDLComponents/src/main/resources/web/js/dlzklib/resource/listboxSortManagerWindow.zul
@@ -5,17 +5,21 @@
 
 <?page title="Listbox manager"?>
 
-<zk xmlns="http://www.zkoss.org/2005/zul">
-    <window onOK="ctl.onOk()" onCancel="ctl.onStorno()" width="540px" id="winListboxManager" closable="true" border="normal" self="@{define(content)}"
-        apply="cz.datalite.zk.components.list.window.controller.ListboxSortManagerController">
+<zk xmlns="http://www.zkoss.org/2005/zul" xmlns:n="native">
+    <window onOK="ctl.onOk()" onCancel="ctl.onStorno()" width="540px" id="winListboxManager" closable="true" 
+            border="normal" self="@{define(content)}"
+            apply="cz.datalite.zk.components.list.window.controller.ListboxSortManagerController" 
+            sclass="window">
+      <div sclass="editable padding10">
 
-        <hbox style="margin: 10px;">
+        <hbox sclass="margin-bottom15">
             <image src="${zkdl:i('sort_big.png')}" />
-            <label  style="font-size: 150%; font-weight: bold; margin-left: 10px;" value="${c:l('listbox.sortingManager.title')}" />
+            <label sclass="bold margin-left10" style="font-size: 150%" value="${c:l('listbox.sortingManager.title')}" />
         </hbox>
-        <grid width="500px" model="@{ctl.model}" style="margin: 10px;">
+        
+        <grid sclass="margin-bottom15" model="@{ctl.model}" width="99.5%">
             <columns sizable="false">
-                <column label="${c:l('listbox.sortingManager.number')}" width="40px"/>
+                <column label="${c:l('listbox.sortingManager.number')}"/>
                 <column label="${c:l('listbox.sortingManager.column')}" width="230px"/>
                 <column label="${c:l('listbox.sortingManager.sort')}" width="230px"/>
             </columns>
@@ -33,9 +37,14 @@
                 </row>
             </rows>
         </grid>
-        <hbox style="margin: 10px; margin-left: auto;">
+        
+        <div sclass="fr">
             <button label="${c:l('listbox.ok')}" forward="onOk" />
             <button label="${c:l('listbox.storno')}" forward="onStorno"/>
-        </hbox>
+        </div>
+        
+        <n:br class="clear" />
+        
+      </div>
     </window>
 </zk>
